--- a/src/_layouts/home.njk
+++ b/src/_layouts/home.njk
@@ -4,9 +4,9 @@ masonry: true
 ---
 
 <div class="wrapper">
-  <header class="full | section" style="--spot-color: var(--color-primary)">
+  <header class="full | section" style="--spot-color: var(--color-4-highlight)">
     <div class="section__inner flow region">
-      <h1 class="text-center text-base-light">{{ title }}</h1>
+      <h1 class="text-center text-base-medium">{{ title }}</h1>
     </div>
     {% include 'svg/divider-waves.svg' %}
   </header>
