--- a/src/_layouts/moorings.njk
+++ b/src/_layouts/moorings.njk
@@ -7,7 +7,7 @@ eleventyImport:
 <div id="map" style="width: 100%; height: 50vh;"></div>
 
 <script>
-  const map = L.map('map').setView([52.708427, 1.5349960], 12);
+  const map = L.map('map', {doubleClickZoom: false}).locate({setView: true, maxZoom: 12});
 
   const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
     maxZoom: 19,
@@ -20,6 +20,21 @@ eleventyImport:
     marker{{ post.fileSlug }}.bindPopup('<a href="{{post.url}}">{{post.data.title}}</a>');
 
   {%- endfor -%}
+
+  function onLocationFound(e) {
+    var radius = e.accuracy;
+
+    L.marker(e.latlng).addTo(map)
+        .bindPopup("You are within " + radius + " meters from this point").openPopup();
+
+    L.circle(e.latlng, radius).addTo(map);
+  }
+  map.on('locationfound', onLocationFound);
+
+  function onLocationError(e) {
+    alert(e.message);
+  }
+  map.on('locationerror', onLocationError);
 
 </script>
 
