Update color of your location marker

--- a/src/_layouts/moorings.njk
+++ b/src/_layouts/moorings.njk
@@ -25,7 +25,8 @@ eleventyImport:
     var radius = e.accuracy;
 
     L.marker(e.latlng).addTo(map)
-        .bindPopup("You are within " + radius + " meters from this point").openPopup();
+        .bindPopup("You are within " + radius + " meters from this point").openPopup()
+        ._icon.style.filter = "hue-rotate(240deg)";
 
     L.circle(e.latlng, radius).addTo(map);
   }
