--- a/src/_includes/partials/moorings-details.njk
+++ b/src/_includes/partials/moorings-details.njk
@@ -1,3 +1,17 @@
+<div id="map" style="width: 100%; height: 50vh;"></div>
+
+<script>
+  const map = L.map('map').setView([{{ lat_long }}], 17);
+
+  const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    maxZoom: 19,
+	  attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+  }).addTo(map);
+
+    var marker{{ post.fileSlug }} = L.marker([{{ lat_long }}]).addTo(map);
+    marker{{ post.fileSlug }}.bindPopup('{{post.data.title}}');
+
+</script>
 
 <dl class="grid region" role="list" data-rows="masonry" data-layout="50-50">
     <dt><strong>Lat/Long:</strong></dt><dd><a href="geo:{{ lat_long }}">{{ lat_long }}</a></dd>
